--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,16 @@ jobs:
                 cd api
                 find . -name "*.js" -exec node --check {} +
             
+    GitLeaks-scan:
+        runs-on: self-hosted
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: git leaks setup
+              uses: gitleaks/gitleaks-action@v2
+              
+            - name: Run gitleaks scan
+              run: |
+                gitleaks detect --source ./client --exit-code 1
+                gitleaks detect --source ./api --exit-code 1
