added needs step for gitleaks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
             
     GitLeaks-scan:
         runs-on: self-hosted
+        needs: compiling
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
