--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,53 @@ jobs:
                 gitleaks detect --source ./client --exit-code 1
                 gitleaks detect --source ./api --exit-code 1
     
+
+    build_docker_backend_and_push:
+        runs-on: ubuntu-latest
+        needs: GitLeaks-scan
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                username: ${{ vars.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+            - name: Build and Push Docker image
+              uses: docker/build-push-action@v6
+              with:
+                context: ./api  
+                push: true
+                tags: anuragjosyula/backend:latest
+                file: ./api/Dockerfile
+    
+    build_docker_frontend_and_push:
+        runs-on: ubuntu-latest
+        needs: GitLeaks-scan
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                username: ${{ vars.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+            - name: Build and Push Docker image
+              uses: docker/build-push-action@v6
+              with:
+                context: ./client  
+                push: true
+                tags: anuragjosyula/frontend:latest
+                file: ./client/Dockerfile
