--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
                 file: ./client/Dockerfile
 
     Trivy_image_scan_frontend:
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
         needs:
           - build_docker_backend_and_push
           - build_docker_frontend_and_push
@@ -106,13 +106,13 @@ jobs:
             - name: Run Trivy vulnerability scanner in fs mode
               uses: aquasecurity/trivy-action@0.28.0
               with:
-                scan-type: image
+                scan-type: image        # diff scan types like fs, image, this is important for trivy
                 scan-ref: anuragjosyula/frontend:latest
                 severity: 'HIGH,CRITICAL'
                 vuln-type: 'os,library'
     
     Trivy_image_scan_backend:
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
         needs:
           - build_docker_backend_and_push
           - build_docker_frontend_and_push
@@ -123,7 +123,7 @@ jobs:
             - name: Run Trivy vulnerability scanner in fs mode
               uses: aquasecurity/trivy-action@0.28.0
               with:
-                scan-type: image
+                scan-type: image            # diff scan types like fs, image, this is important for trivy
                 scan-ref: anuragjosyula/backend:latest
                 severity: 'HIGH,CRITICAL'
                 vuln-type: 'os,library'
